[gd_scene load_steps=4 format=3 uid="uid://corner_box_scene"]

[ext_resource type="Script" path="res://scripts/corner_box.gd" id="1_script"]
[ext_resource type="Texture2D" path="res://assets/ingame_scene_assets/Corner_Box.png" id="2_texture"]
[ext_resource type="FontFile" path="res://assets/font/Papyrus.ttf" id="3_font"]

[node name="CornerBox" type="Control"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 3
anchors_preset = 0
offset_right = 300.0
offset_bottom = 300.0
script = ExtResource("1_script")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_texture")
expand_mode = 1
stretch_mode = 5

[node name="ContentMargin" type="MarginContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 100

[node name="VBox" type="VBoxContainer" parent="TextureRect/ContentMargin"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TitleLabel" type="Label" parent="TextureRect/ContentMargin/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 24
text = "Everyone has"

[node name="DetailLabel" type="Label" parent="TextureRect/ContentMargin/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 20
text = "4 Dots
2 Stripes"
autowrap_mode = 2
